# nx1-data-migrator

./: .env.migration.example  .env.ranger.example  .env.shared.example  .gitignore  README.md  deploy.py  env.migration.example  env.ranger.example  env.shared.example  migration_dag.py  migration_dags_combined.py  pyproject.toml  ranger_policy_dags.py  ranger_policy_readme.md
.github/workflows/: ci.yml
airflow-3-migration-assistant/: README.md  airflow3_migration_assistant.py
code-scanner/: .coveragerc  README.md  code-scanner.py  pytest.ini  requirements-test.txt  sample-report.html
code-scanner/tests/: conftest.py  test_cli.py  test_rules.py  test_scanner_core.py
data-iceberg-migrator/: .coveragerc  .env.example  README.md  README_dag5_iceberg_rewrite.md  migration_dag_folder_copy.py  migration_dag_iceberg.py  migration_dag_iceberg_rewrite.py  migration_dag_mapr_to_s3.py  migration_dag_metadata.py  migration_dags_combined.py  pytest.ini  requirements-test.txt  test.py
data-iceberg-migrator/.github/workflows/: test.yml
data-iceberg-migrator/notebooks/: test_iceberg_to_iceberg.ipynb
data-iceberg-migrator/tests/: conftest.py  helpers.py  test_dag1_tasks.py  test_dag2_tasks.py  test_dag3_tasks.py  test_dag4_tasks.py  test_dag_integrity.py  test_dag_structure.py  test_metadata_strategies.py  test_partition_utils.py  test_textfile_delimiter.py  test_utils.py
data-iceberg-migrator/utils/: shared.py
data-iceberg-migrator/utils/metadata_strategies/: __init__.py  hive_to_hive.py  iceberg_to_iceberg.py
data-iceberg-migrator/utils/migrations/: iceberg_rewrite.py  iceberg_to_iceberg.py  partition_utils.py  shared.py
data-iceberg-migrator/utils/migrations/metadata_strategies/: __init__.py  hive_to_hive.py  iceberg_to_iceberg.py
ranger-policies-generator/: .coveragerc  .env.example  README.md  USER_GUIDE.md  pytest.ini  ranger-policies-generator.py  ranger-policies-generator_airflow3.py  ranger-utils.py  ranger_policies_generator_airflow3.py  ranger_utils.py
ranger-policies-generator/tests/: conftest.py  test_parsing.py  test_ranger_utils.py  test_tasks.py
